
Added exactly(n) expectation to expect an invocation an exact number of times.

* 1.0.1

Improved error messages

* 1.0.0

Moved StubSequence into org.jmock.stub package
Added NOT_NULL constraint constant to MockObjectSupportTestCase

* 1.0.0RC1 - first semistable release