@@ -1,4 +1,5 @@
-
+Can set description of IsAnything and IsNothing constraints
+Added IsNothing constraint
 Added exactly(n) expectation to expect an invocation an exact number of times.
 
 * 1.0.1
